--- a/2016-11-30-python-oop-modeling.org
+++ b/2016-11-30-python-oop-modeling.org
@@ -185,7 +185,37 @@ tags: [coding, algorithms, oop]
      : 22
      : Deposit not inherited form the person's class
 
-     
+**** General inheritance from an abstract method
+     #+BEGIN_SRC python :results output
+       from abc import ABC, abstractmethod
+
+       class Person(object):
+           #@abstractmethod
+           def __init__(self, **kwargs):
+               self.name = kwargs['name']
+               self.deposit = kwargs['deposit']
+
+       class Customer(Person):
+           # def __init__(self, **kwargs):
+           #     # super(Customer, self).__init__(**kwargs)
+           #     self.age = kwargs['age']
+           pass
+
+
+       a = Customer(name='John', deposit=123, age=22)
+       # print(a.age)
+       try:
+           print(a.deposit)
+       except AttributeError:
+           print("Deposit not inherited form the person's class")
+
+     #+END_SRC
+
+     #+RESULTS:
+     : 22
+     : Deposit not inherited form the person's class
+
+
 *** Meal
 
 *** Basket
