--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -989,3 +989,21 @@ tags: [coding, algorithms]
    #+END_QUOTE
 
 ** Appropriate solution format
+   #+BEGIN_SRC python :results output :session runoff :exports both
+     def runoff(voters):
+         pass
+
+     voters = [["dem", "ind", "rep"],
+               ["rep", "ind", "dem"],
+               ["ind", "dem", "rep"],
+               ["ind", "rep", "dem"]]
+
+     Test.assert_equals(runoff(voters), "ind")
+
+     voters = [["a", "c", "d", "e", "b"],
+               ["e", "b", "d", "c", "a"],
+               ["d", "e", "c", "a", "b"],
+               ["c", "e", "d", "b", "a"],
+               ["b", "e", "a", "c", "d"]];
+     Test.assert_equals(runoff(voters), None);
+   #+END_SRC
