--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1140,3 +1140,20 @@ tags: [coding, algorithms]
      Test.assert_equals(solve("123 457\n123 456\n654 312\n999 000\n123 457"), "1 carry operations\nNo carry operation\nNo carry operation\nNo carry operation\n1 carry operations","Try this one: (123 - 457 | 123 - 456 | 654 - 312 | 999 - 000 | 123 - 457)")
      Test.assert_equals(solve("1 9\n123456789 111111101\n01 09\n11 09\n123 457"), "1 carry operations\n1 carry operations\n1 carry operations\n1 carry operations\n1 carry operations", "Try this one: (1 - 9 | 123456789 - 111111101 | 01 - 09 | 11 - 09 | 123 - 457)")
    #+END_SRC
+* #12 Valid Parentheses
+  
+** Description
+   #+BEGIN_QUOTE
+   Write a function called validParentheses that takes a string of parentheses,
+   and determines if the order of the parentheses is valid. validParentheses
+   should return true if the string is valid, and false if it's invalid.
+
+   Examples:
+   validParentheses( "()" ) => returns true
+   validParentheses( ")(()))" ) => returns false
+   validParentheses( "(" ) => returns false
+   validParentheses( "(())((()())())" ) => returns true
+
+   All input strings will be nonempty, and will only consist of open parentheses '(' and/or closed parentheses ')'
+   #+END_QUOTE
+
