--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1203,3 +1203,24 @@ tags: [coding, algorithms]
      assert(valid_parentheses("hi())(") == False)
      assert(valid_parentheses("hi(hi)()") == True)
    #+END_SRC
+
+* #13 Coordinates Validator
+  
+** Description
+   #+BEGIN_QUOTE
+   You need to create a function that will validate if given parameters
+   are valid geographical coordinates.
+
+   Valid coordinates look like the following: "23.32353342, -32.543534534".
+   The return value should be either true or false.
+
+   Latitude (which is first float) can be between 0 and 90, positive or
+   negative. Longitude (which is second float) can be between 0 and 180,
+   positive or negative.
+
+   Coordinates can only contain digits, or one of the following symbols
+   (including space after comma) -, .
+
+   There should be no space between the minus "-" sign and the digit after
+   it.
+   #+END_QUOTE
