--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1384,3 +1384,18 @@ tags: [coding, algorithms]
      test.describe("Your own tests")
      # Add more tests here
    #+END_SRC
+* Next bigger number with the same digits
+** Description
+   #+BEGIN_QUOTE
+   You have to create a function that takes a positive integer number
+   and returns the next bigger number formed by the same digits:
+
+   next_bigger(12)==21
+   next_bigger(513)==531
+   next_bigger(2017)==2071
+   If no bigger number can be composed using those digits, return -1:
+
+   next_bigger(9)==-1
+   next_bigger(111)==-1
+   next_bigger(531)==-1
+   #+END_QUOTE
