--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1399,3 +1399,14 @@ tags: [coding, algorithms]
    next_bigger(111)==-1
    next_bigger(531)==-1
    #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python
+     def next_bigger(n):
+      #your code here
+
+     Test.assert_equals(next_bigger(12),21)
+     Test.assert_equals(next_bigger(513),531)
+     Test.assert_equals(next_bigger(2017),2071)
+     Test.assert_equals(next_bigger(414),441)
+     Test.assert_equals(next_bigger(144),414)
+   #+END_SRC
