--- a/2017-01-11-problem-solving-approach.org
+++ b/2017-01-11-problem-solving-approach.org
@@ -21,34 +21,37 @@ tags: [problem, solving, technique]
    possible to satisfy the condition? Is the condition sufficient to
    determine the unknown? Or is it insufficient? Or redundant? Or
    contradictory?
-*** Draw a figure. Introduce suitable notation.
+-----
 
-*** Separate the various parts of the condition.
-    Can you write them down?
-
+** Draw a figure. Introduce suitable notation.
+-----
+** Separate the various parts of the condition.
+   Can you write them down?
+-----
 ** Find the connection between the data and the unknown.
+
    You may be obliged to consider auxiliary problems if an immediate
    connection cannot be found. You should obtain eventually a plan of
    the solution.
 
-   Have you seen it before? Or have you seen the same problem in a
+   \alpla Have you seen it before? Or have you seen the same problem in a
    slightly different form?
 
-   Do you know a related problem? Do you know a theorem that could be
+   \beta Do you know a related problem? Do you know a theorem that could be
    useful?
 
-   Look at the unknown! And try to think of a familiar problem having
+   \gamma Look at the unknown! And try to think of a familiar problem having
    the same or a similar unknown.
 
-   Here is a problem related to yours and solved before. Could you use
+   \delta Here is a problem related to yours and solved before. Could you use
    it? Could you use its result? Could you use its method? Should you
    introduce some auxiliary element in order to make its use possible?
    
-   Could you restate the problem? Could you restate it still
+   \epsilon Could you restate the problem? Could you restate it still
    differently? Go back to definitions.
 
-   If you cannot solve the proposed problem try to solve first some
-   related problem. Could you imagine a more accessible related problem?
+   \zeta If you cannot solve the proposed problem try to /solve first some
+   related problem/. Could you imagine a more accessible related problem?
    A more general problem? A more special problem? An analogous problem?
    Could you solve a part of the problem? Keep only a part of the
    condition, drop the other part; how far is the unknown then
@@ -58,21 +61,23 @@ tags: [problem, solving, technique]
    necessary, so that the new unknown and the new data are nearer to
    each other?
 
-   Did you use all the data? Did you use the whole condition? Have you
+   \eta Did you use all the data? Did you use the whole condition? Have you
    taken into account all essential notions involved in the problem?
-
+-----
 ** Carry out your plan.
 
-   Carrying out your plan of the solution, check each step. Can you see
-   clearly that the step is correct? Can you prove that it is correct?
+   Carrying out your plan of the solution, check each step.
 
+   - Can you see clearly that the step is correct?
+   - Can you prove that it is correct?
+-----
 ** Examine the solution obtained.
 
-   Can you check the result? Can you check the argument?
-
-   Can you derive the result differently? Can you see it at a glance?
-
-   Can you use the result, or the method, for some other problem?
+   - Can you check the result?
+   - Can you check the argument?
+   - Can you derive the result differently?
+   - Can you see it at a glance?
+   - Can you use the result, or the method, for some other problem?
 
 
 * Functional method
